# SSPD

./: .gitignore  README.md  pyproject.toml  setup.py  ssh_scp_project_delivery.py
sspd/: .gitignore  __backend.py  __check_before_start.py  __ignoring_file.py  __init__.py  __misc.py  base.py  config_file.py  exceptions.py  file_analysing.py  ignoring_file.py  tasks.py
sspd/checker/: __init__.py  local.py  mixed.py  remote.py
sspd/misc_helpers/: __init__.py  ignoring_file.py
sspd/tasks/: __init__.py  base.py  file_analysing.py  mastered.py
