[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sspd"
version = "1.2.0"
description = "SSH/SCP Project Delivery"
readme = "README.md"
authors = [
    { name = "Homer", email = "mdfilippov_2@edu.hse.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'bcrypt==4.2.1',
    'cffi==1.17.1',
    'cryptography==44.0.0',
    'paramiko==3.5.0',
    'pycparser==2.22',
    'PyNaCl==1.5.0'
]